Agrega título y fecha última actualización

--- a/index.html
+++ b/index.html
@@ -1,1 +1,12 @@
-Trabajo en progreso...
+<!DOCTYPE html>
+<head>
+    <title> Página Web maticlein </title>
+</head>
+<body>
+    <h1>Trabajo en progreso...</h1>
+    <p>Última actualización: 05/08/2020 12:42 Hrs.</p>
+</body>
+<html>
+
+</html>
+
