--- a/index.html
+++ b/index.html
@@ -1,12 +1,100 @@
 <!DOCTYPE html>
+<html lang="en">
 <head>
-    <title> Página Web maticlein </title>
+    <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta http-equiv="X-UA-Compatible" content="ie=edge">
+  <!-- Font -->
+  <link href="https://fonts.googleapis.com/css?family=Muli&display=swap" rel="stylesheet">
+  <!-- Styles -->
+  <link rel="stylesheet" href="./css/styles.css">
+  <!-- Title -->
+  <title>Programación de Computadores</title>
 </head>
 <body>
-    <h1>Trabajo en progreso...</h1>
-    <p>Última actualización: 05/08/2020 12:42 Hrs.</p>
-</body>
-<html>
+    <header class="header">
+        <img class="header__img" src="./assets/logo_ufro.png" alt="Logo UFRO">
+    </header>
 
+    <section class="content">
+
+        <section class="main">
+            <div class="main__title">
+                <h1>ICC202 - Programación de Computadores</h1>
+                <h2>Proyecto de Programación</h2>
+            </div>
+        </section>
+
+
+        <h2 class="categories__title">Tareas 1er Semestre 2020</h2>
+
+        <section class="carousel">
+            <div class="carousel__container">
+                <div class="carousel-item">
+                    <img class="carousel-item__img" src="https://images.pexels.com/photos/5053986/pexels-photo-5053986.jpeg?cs=srgb&dl=pexels-cottonbro-5053986.jpg&fm=jpg" alt="Asignatura 1">
+                    <div class="carousel-item__details">
+                        <div class="carousel-item__details--icons">
+                            <a href="./components/error404.html"><img src="./assets/play-icon.png" alt="Play"></a>
+                        </div>
+                        <p class="carousel-item__details--title">Grupo 1</p>
+                        <p class="carousel-item__details--subtitle">Shazam</p>
+                    </div>
+                </div>
+                <div class="carousel-item">
+                    <img class="carousel-item__img" src="https://images.pexels.com/photos/753876/pexels-photo-753876.jpeg?cs=srgb&dl=pexels-stephan-müller-753876.jpg&fm=jpg" alt="Asignatura 2">
+                    <div class="carousel-item__details">
+                        <div class="carousel-item__details--icons">
+                            <a href="./components/grupo2.html"><img src="./assets/play-icon.png" alt="Play"></a>
+                        </div>
+                        <p class="carousel-item__details--title">Grupo 2</p>
+                        <p class="carousel-item__details--subtitle">Estacionamiento</p>
+                    </div>
+                </div>
+                <div class="carousel-item">
+                    <img class="carousel-item__img" src="https://images.pexels.com/photos/1567058/pexels-photo-1567058.jpeg?cs=srgb&dl=pexels-johannes-plenio-1567058.jpg&fm=jpg" alt="Asignatura 3">
+                    <div class="carousel-item__details">
+                        <div class="carousel-item__details--icons"> 
+                            <a href="./components/grupo3.html"><img src="./assets/play-icon.png" alt="Play"></a>          
+                        </div>
+                        <p class="carousel-item__details--title">Grupo 3</p>
+                        <p class="carousel-item__details--subtitle">Tala Controlada</p>
+                    </div>
+                </div>
+                <div class="carousel-item">
+                    <img class="carousel-item__img" src="https://images.pexels.com/photos/2672097/pexels-photo-2672097.jpeg?cs=srgb&dl=pexels-markus-spiske-2672097.jpg&fm=jpg" alt="Asignatura 4">
+                    <div class="carousel-item__details">
+                        <div class="carousel-item__details--icons">
+                            <a href="./components/grupo4.html"><img src="./assets/play-icon.png" alt="Play"></a>         
+                        </div>
+                        <p class="carousel-item__details--title">Grupo 4</p>
+                        <p class="carousel-item__details--subtitle">Boletería Cine</p>
+                    </div>
+                </div>
+                <div class="carousel-item">
+                    <img class="carousel-item__img" src="https://images.pexels.com/photos/374016/pexels-photo-374016.jpeg?cs=srgb&dl=pexels-burst-374016.jpg&fm=jpg" alt="Asignatura 5">
+                    <div class="carousel-item__details">
+                        <div class="carousel-item__details--icons">
+                            <a href="./components/grupo5.html"><img src="./assets/play-icon.png" alt="Play"></a>   
+                        </div>
+                        <p class="carousel-item__details--title">Grupo 5</p>
+                        <p class="carousel-item__details--subtitle">Organizador Archivos</p>
+                    </div>
+                </div>
+                <div class="carousel-item">
+                    <img class="carousel-item__img" src="https://images.pexels.com/photos/4483610/pexels-photo-4483610.jpeg?cs=srgb&dl=pexels-tiger-lily-4483610.jpg&fm=jpg" alt="Asignatura 6">
+                    <div class="carousel-item__details">
+                        <div class="carousel-item__details--icons">
+                            <a href="./components/grupo6.html"><img src="./assets/play-icon.png" alt="Play"></a>   
+                        </div>
+                        <p class="carousel-item__details--title">Grupo 6</p>
+                        <p class="carousel-item__details--subtitle">Control de Inventario</p>
+                    </div>
+                </div>
+            </div>
+        </section>
+    </section>
+
+
+    
+</body> 
 </html>
-
