--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
         <!-- Styles -->
         <link rel="stylesheet" href="./css/styles.css">
         <!-- Title -->
-        <title>Programación de Computadores</title>
+        <title>ICC202-5: Programación de Computadores</title>
     </head>
     <body>
         <header class="header">
@@ -20,13 +20,13 @@
 
             <section class="main">
                 <div class="main__title">
-                    <h1>ICC202 - Programación de Computadores</h1>
+                    <h1>ICC202-5: Programación de Computadores</h1>
                     <h2>Proyecto de Programación</h2>
                 </div>
             </section>
 
 
-            <h2 class="categories__title">Tareas 1er Semestre 2020</h2>
+            <h2 class="categories__title">Tareas 1º Semestre 2020</h2>
 
             <section class="carousel">
                 <div class="carousel__container">
@@ -44,7 +44,7 @@
                         <img class="carousel-item__img" src="https://images.pexels.com/photos/753876/pexels-photo-753876.jpeg?cs=srgb&dl=pexels-stephan-müller-753876.jpg&fm=jpg" alt="grupo2_estacionamiento">
                         <div class="carousel-item__details">
                             <div class="carousel-item__details--icons">
-                                <a href="./components/grupo2.html"><img src="./assets/play-icon.png" alt="Play"></a>
+                                <a href="./components/2020-1-grupo2.html"><img src="./assets/play-icon.png" alt="Play"></a>
                             </div>
                             <p class="carousel-item__details--title">Grupo 2</p>
                             <p class="carousel-item__details--subtitle">Estacionamiento</p>
@@ -54,7 +54,7 @@
                         <img class="carousel-item__img" src="https://images.pexels.com/photos/1567058/pexels-photo-1567058.jpeg?cs=srgb&dl=pexels-johannes-plenio-1567058.jpg&fm=jpg" alt="grupo3_tala_controlada">
                         <div class="carousel-item__details">
                             <div class="carousel-item__details--icons"> 
-                                <a href="./components/grupo3.html"><img src="./assets/play-icon.png" alt="Play"></a>          
+                                <a href="./components/2020-1-grupo3.html"><img src="./assets/play-icon.png" alt="Play"></a>          
                             </div>
                             <p class="carousel-item__details--title">Grupo 3</p>
                             <p class="carousel-item__details--subtitle">Tala Controlada</p>
@@ -64,7 +64,7 @@
                         <img class="carousel-item__img" src="https://images.pexels.com/photos/2672097/pexels-photo-2672097.jpeg?cs=srgb&dl=pexels-markus-spiske-2672097.jpg&fm=jpg" alt="grupo4_boleteria_cine">
                         <div class="carousel-item__details">
                             <div class="carousel-item__details--icons">
-                                <a href="./components/grupo4.html"><img src="./assets/play-icon.png" alt="Play"></a>         
+                                <a href="./components/2020-1-grupo4.html"><img src="./assets/play-icon.png" alt="Play"></a>         
                             </div>
                             <p class="carousel-item__details--title">Grupo 4</p>
                             <p class="carousel-item__details--subtitle">Boletería Cine</p>
@@ -74,7 +74,7 @@
                         <img class="carousel-item__img" src="https://images.pexels.com/photos/374016/pexels-photo-374016.jpeg?cs=srgb&dl=pexels-burst-374016.jpg&fm=jpg" alt="grupo5_organizador_archivos">
                         <div class="carousel-item__details">
                             <div class="carousel-item__details--icons">
-                                <a href="./components/grupo5.html"><img src="./assets/play-icon.png" alt="Play"></a>   
+                                <a href="./components/2020-1-grupo5.html"><img src="./assets/play-icon.png" alt="Play"></a>   
                             </div>
                             <p class="carousel-item__details--title">Grupo 5</p>
                             <p class="carousel-item__details--subtitle">Organizador Archivos</p>
@@ -84,7 +84,7 @@
                         <img class="carousel-item__img" src="https://images.pexels.com/photos/4483610/pexels-photo-4483610.jpeg?cs=srgb&dl=pexels-tiger-lily-4483610.jpg&fm=jpg" alt="grupo6_control_inventario">
                         <div class="carousel-item__details">
                             <div class="carousel-item__details--icons">
-                                <a href="./components/grupo6.html"><img src="./assets/play-icon.png" alt="Play"></a>   
+                                <a href="./components/2020-1-grupo6.html"><img src="./assets/play-icon.png" alt="Play"></a>   
                             </div>
                             <p class="carousel-item__details--title">Grupo 6</p>
                             <p class="carousel-item__details--subtitle">Control de Inventario</p>
@@ -92,14 +92,14 @@
                     </div>
                 </div>
             </section>
-            <h2 class="categories__title">Tareas 2o Semestre 2020</h2>
+            <h2 class="categories__title">Tareas 2º Semestre 2020</h2>
             <section class="carousel">
                 <div class="carousel__container">
                     <div class="carousel-item">
                         <img class="carousel-item__img" src="https://images.pexels.com/photos/4484155/pexels-photo-4484155.jpeg?cs=srgb&dl=pexels-tiger-lily-4484155.jpg&fm=jpg" alt="grupo1_ventas_inventario">
                         <div class="carousel-item__details">
                             <div class="carousel-item__details--icons">
-                                <a href="./components/error404.html"><img src="./assets/play-icon.png" alt="Play"></a>
+                                <a href="https://ttzswjvlwy6z7peu7t7eyw-on.drv.tw/tecnoled/inddex.html"><img src="./assets/play-icon.png" alt="Play"></a>
                             </div>
                             <p class="carousel-item__details--title">Grupo 1</p>
                             <p class="carousel-item__details--subtitle">Inventario y Ventas</p>
@@ -109,7 +109,7 @@
                         <img class="carousel-item__img" src="https://images.pexels.com/photos/1135453/pexels-photo-1135453.jpeg?cs=srgb&dl=pexels-shane-aldendorff-1135453.jpg&fm=jpg" alt="grupo2_alerta_emergencias">
                         <div class="carousel-item__details">
                             <div class="carousel-item__details--icons">
-                                <a href="./components/error404.html"><img src="./assets/play-icon.png" alt="Play"></a>
+                                <a href="./components/2020-2-grupo2.html"><img src="./assets/play-icon.png" alt="Play"></a>
                             </div>
                             <p class="carousel-item__details--title">Grupo 2</p>
                             <p class="carousel-item__details--subtitle">Alerta Emergencias</p>
@@ -119,7 +119,7 @@
                         <img class="carousel-item__img" src="https://images.pexels.com/photos/6325001/pexels-photo-6325001.jpeg?cs=srgb&dl=pexels-igor-6325001.jpg&fm=jpg" alt="grupo3_clasificación_objetos">
                         <div class="carousel-item__details">
                             <div class="carousel-item__details--icons"> 
-                                <a href="./components/error404.html"><img src="./assets/play-icon.png" alt="Play"></a>          
+                                <a href="./components/2020-2-grupo3.html"><img src="./assets/play-icon.png" alt="Play"></a>          
                             </div>
                             <p class="carousel-item__details--title">Grupo 3</p>
                             <p class="carousel-item__details--subtitle">Clasificación Objetos</p>
@@ -129,6 +129,8 @@
             </section>
         </section>
         <footer class="footer">
+            <p>©2021 Matthias Clein E.</p>
+            <p>Todos los derechos reservados.</p>
         </footer>
 
     </body> 
