--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
         <link href="https://fonts.googleapis.com/css?family=Muli&display=swap" rel="stylesheet">
         <!-- Styles -->
         <link rel="stylesheet" href="./css/styles.css">
+        <link rel="stylesheet" href="./css/desktop.css" media="(min-width: 700px)">
         <!-- Title -->
         <title>ICC202-5: Programación de Computadores</title>
     </head>
